--- a/project4/src/App.css
+++ b/project4/src/App.css
@@ -1,5 +1,4 @@
 .body{
-    background-color: #FFD97D;
     height: 100vh;
     width: 100vw;
 }
@@ -9,7 +8,7 @@
     margin: 0px;
     padding: 10px 20px;
     height: 15vh;
-    background-color: #60D394;
+    background-color: #FFD97D;
     align-items: center;
 
 }
@@ -24,7 +23,7 @@
     justify-items: center;
 }
 .footer{
-    background-color: #60D394;
+    background-color: #FFD97D;
     height: 5vh;
     display: flex;
     justify-content: center;
@@ -45,4 +44,18 @@
 }
 .auth-button{
     margin: 5px;
+}
+
+.food-card{
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    background-color: #AAF683;
+    justify-content: center;
+    padding: 10px;
+    align-items: center;
+    border: solid #60D394;
+    border-radius: 10px;
+    margin: 20px;
+
 }
