--- a/project4/src/App.css
+++ b/project4/src/App.css
@@ -58,17 +58,51 @@
     border-radius: 10px;
     margin: 20px;
 }
-
+.food-modal{
+    display: flex;
+    flex-direction: column;
+    background-color: #AAF683;
+    padding: 10px;
+    border: solid #60D394;
+    border-radius: 10px;
+    margin: 20px;
+    width: 70%;
+    text-align: center;
+}
+.food-modal-lower{
+    display: flex;
+}
 .exposures-container{
     overflow: scroll;
     height: 350px;
+    width: 50%;
 }
 .single-exposure{
     background-color: #FF9B85;
     border: solid #EE6055;
     border-radius: 10px;
-    margin: 20px;
-    width: 40%;
+    margin: 20px auto;
+    width: 90%;
     padding: 5px 10px;
     height: 150px;
+}
+.add-exposure-form{
+    background-color: #FFD97D;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    padding: 10px;
+    width: 30%;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-food{
+    background-color: #FF9B85;
+    border: solid #EE6055;
+    border-radius: 10px;
+    margin: 20px auto;
+    padding: 5px 10px;
+    width: 20%;
 }
