Food Modal Opens and closes appropriately

--- a/project4/src/App.css
+++ b/project4/src/App.css
@@ -1,6 +1,8 @@
 .body{
     height: 100vh;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
 }
 .header{
     display: flex;
@@ -64,6 +66,16 @@
     border-radius: 10px;
     margin: 20px;
 }
+.food-modal-container{
+    z-index: 1;
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:rgba(0,0,0, 0.5);
+}
 .food-modal{
     display: flex;
     flex-direction: column;
@@ -74,7 +86,6 @@
     margin: 20px;
     width: 70%;
     text-align: center;
-    z-index: 1;
 }
 .food-modal-lower{
     display: flex;
