--- a/project4/src/App.css
+++ b/project4/src/App.css
@@ -163,10 +163,15 @@
     border-radius: 10px;
     margin: 20px;
 }
-.list{
+.list-placeholder{
     border: solid black;
     width: 50%;
     margin: 10px;
+}
+.list{
+    width: 100%;
+    margin: 10px;
+    height: 100%;
 }
 
 .filter-pane{
