--- a/project4/src/App.css
+++ b/project4/src/App.css
@@ -213,3 +213,11 @@
     border-radius: 10px;
     padding: 10px;
 }
+.add-to-list-modal{
+    background-color: #AAF683;
+    border: solid #60D394; 
+    border-radius: 10px;
+    padding: 10px;
+    width: 20%;
+    height: 20%;
+}
