--- a/project4/src/App.css
+++ b/project4/src/App.css
@@ -127,6 +127,7 @@
     padding: 5px 10px;
     width: 20%;
     height: 40%;
+    min-width: 150px;
 }
 .list-config-pane{
     display: flex;
@@ -180,7 +181,9 @@
     margin: 10px;
     height: 100%;
 }
-
+.list-item{
+    cursor: pointer;
+}
 .filter-pane{
     background-color: #FF9B85;
     border: solid #EE6055;
@@ -193,6 +196,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 150px;
 }
 
 .browse-page{
