--- a/project4/src/App.css
+++ b/project4/src/App.css
@@ -131,6 +131,7 @@
     padding: 5px 10px;
     width: 155px;
     height: 40%;
+    min-height: 290px;
     min-width: 150px;
 }
 .list-config-pane{
@@ -203,6 +204,7 @@
     justify-content: center;
     align-items: center;
     width: 150px;
+    min-height: 290px;
 }
 
 .browse-page{
@@ -248,8 +250,8 @@
     border: solid #60D394; 
     border-radius: 10px;
     padding: 10px;
-    width: 20vw;
-    min-width: 165px;
+    width: 25vw;
+    min-width: 223px;
 }
 .sign-up-modal h2{
     text-align: center;
@@ -281,4 +283,18 @@
     margin: 20px;
     width: 70%;
     text-align: center;
+}
+.text-list-modal{
+    display: flex;
+    flex-direction: column;
+    background-color: #AAF683;
+    padding: 10px;
+    border: solid #60D394;
+    border-radius: 10px;
+    margin: 20px;
+    width: 70%;
+    text-align: center;   
+}
+.error-message{
+    color: red;
 }
