--- a/project4/src/App.css
+++ b/project4/src/App.css
@@ -93,9 +93,11 @@
     margin: 20px;
     width: 70%;
     text-align: center;
+    min-width: 550px;
 }
 .food-modal-lower{
     display: flex;
+    justify-content: space-around;
 }
 .exposures-container{
     overflow: scroll;
@@ -186,7 +188,11 @@
 .list{
     width: 100%;
     margin: 10px;
-    height: 100%;
+    height: 95%;
+    overflow: scroll;
+}
+.list-title{
+    display: inline;
 }
 .list-item{
     cursor: pointer;
