--- a/project4/src/App.css
+++ b/project4/src/App.css
@@ -345,3 +345,20 @@
     text-decoration: none;
     color: black;
 }
+button{
+    box-sizing: border-box;
+    appearance: none;
+    background-color: transparent;
+    border-radius: 5px;
+    border: 2px solid white;
+    cursor: pointer;
+    box-shadow: 0 0 40px white inset, 0 0 0 0 white;
+    transition: all 150ms ease-in-out;
+    align-self: center;
+    font-size: 1rem;
+    line-height: 1;
+    text-align: center;
+}
+button:hover {
+    box-shadow: 0 0 10px 0 white inset, 0 0 10px 4px white;
+  }
